Add Bach#link() and add Folder.JDK_HOME
Closes #2